--- a/style2.css
+++ b/style2.css
@@ -102,10 +102,49 @@ nav ul li a:hover {
     color: #b2b2b5;
 }
 
-
 .container2 {
     width: 90%;
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
+}
+
+/* Dropdown Styles */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #151521;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #151521;
+    min-width: 160px;
+    z-index: 1;
+    border-radius: 5px;
+}
+
+.dropdown-content a {
+    color: #fbd307;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #252535;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
